# filter

./: .gitignore  CMakeLists.txt  CONTEXTE DU PROJET.MD  OPTIMIZER PYTHON.MD  PERFORMANCE.md  README.MD  RESEARCH_DOCUMENTATION.md  build.sh  setup_data.sh  setup_nfqueue.sh
data/: cleaned_baseline.rules  firewall.sh  patterns.txt  rules_config.msgpack
include/: config.hpp
include/core/: engine.hpp  engine_fast.hpp  flow_key.hpp  packet.hpp  types.hpp  verdict.hpp
include/deep/: hs_matcher.hpp  tcp_reassembler.hpp  tcp_reassembler_fast.hpp  tcp_stream.hpp  tcp_stream_fast.hpp
include/fastpath/: ip_radix.hpp  port_map.hpp  rule_index.hpp
include/io/: loader.hpp  nfqueue.hpp
include/utils/: logger.hpp  memory_pool.hpp
src/: main.cpp
src/deep/: hs_matcher.cpp
src/io/: loader.cpp  nfqueue.cpp
